---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 04. 06. 2018
  Bugfixes:
    - Fixed Dectorio landscape tiles being picked up by FARL
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 08. 04. 2018
  Bugfixes:
    - Fixed parameter errors for on_built_tile event
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 26. 03. 2018
  Changes:
    - Added support for NiceFill mod when using "bridge water" option
    - Added option to disable the FARL module
  Bugfixes:
    - Fixed autopilot not working with ghost driver
    - Fixed wierd interaction between Alien Biomes, Dectorio and FARL. Only blueprintable tiles will be removed in maintenance mode
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 29. 01. 2018
  Bugfixes:
    - Fixed settings not being saved
    - Fixed some errors in Bulldozer/Maintenance mode
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 19. 01. 2018
  Bugfixes:
    - Fixed poles not being placed correctly when driving diagonally
  Changes:
    - Added option to display a message when using the hotkey to toggle between automatic and manual mode
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 13. 01. 2018
  Bugfixes:
    - Fixed errors with autopilot
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 13. 12. 2017
  Changes:
    - Updated for Factorio 0.16