@@ -1,6 +1,6 @@
 {
   "name": "FARL",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "factorio_version": "0.16",
   "title": "Fully Automated Rail Layer",
   "author": "Choumiko",
